   * Add elm_plug signals "image,deleted" (fixed typo) and "image,resized".
   * Add elm_dbus_menu to support D-Bus external menus.
   * Add configuration: ELM_EXTERNAL_MENU, to switch between internal and extenal menus
   * Add elm_systray.[ch]: Add support to D-Bus systray icons.
   * Add elm_label_slide_mode_set(), elm_label_slide_mode_get()

Improvements:

   * Toolbar widget is now a scrollable widget.
   * Entry widget is now a scrollable layout.
   * Fileselector entry widget is now an elm layout.
   * Ctxpopup widget is now an elm layout.
   * Multibutton entry entry is now an elm layout.
   * Popup widget is now an elm layout.
   * Panel widget is now an elm layout.
   * Improve elm map module loading/searching efficiency.
   * Diskselector handles dyanmic show/hide of icons now like buttons.
   * Plug widget handles image object deletion
   * Handle COMPOUND_TEXT cnp
   * Conformant widget handles displaymode change related with keypad.
   * Conformant widget handles indicator service.
   * Elm_Transit image animation effects supports elm_image object type.
   * Include a main menu in elm_win, which can be exported via D-Bus.
   * Merged the file_entry and the path_entry in the fileselector and allowing typing the path.
   * Setting the same font size of the others widgets for the dayselector.
   * Added a separated spinner for year on calendar.

Fixes:

   * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
   * Fix re-order animation when it doesn't end correctly.
   * Fix popup to apply the same style to the notify sub-widget.
   * Fix Ctxpopup direction if unknown priority used.
   * Fix diskselector when bounce off and round enabled.
   * Fix bubble info field set.
   * Escape theme filename correctly.
   * Fix diskselector selection of middle item.
   * Fix multibuttonentry list corruption.
   * Fix copy&paste error in elm_flip.
   * Fix possible invalid memory access in elm_access.